# v6-session-basics

./: Dockerfile  Makefile  README.md  algorithm_store.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
docs/: README.md  conf.py  index.rst
docs/v6-session-basics/: implementation.rst  usage.rst
notebooks/: session-csv-extract-test.ipynb
test/: test.py  test_metadata.py  test_pre_process.py  test_read_csv.py  test_sleep.py  test_sum.py  test_sum_many.py  test_two_df_sum.py
v6-session-basics/: .copier-answers.yml  __init__.py  central.py  partial.py  tmp.py
